<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/tv_title"
        style="@style/BaseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="16sp"
        android:gravity="center"
        android:text="@string/choose_level"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_level_test"
        style="@style/BaseButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/test" />

    <Button
        android:id="@+id/button_level_easy"
        style="@style/BaseButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy" />

    <Button
        android:id="@+id/button_level_normal"
        style="@style/BaseButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal" />

    <Button
        android:id="@+id/button_level_hard"
        style="@style/BaseButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard" />

</LinearLayout>