<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:padding="10dp"
    tools:context=".presentation.GameFinishedFragment">

    <ImageView
        android:id="@+id/emoji_result"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/game_over"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:src="@drawable/ic_win" />

    <LinearLayout
        android:id="@+id/linearLayout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64sp"
        android:layout_marginBottom="16sp"
        android:background="@drawable/base_background"
        android:backgroundTint="@color/gray"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_2"
        app:layout_constraintTop_toBottomOf="@id/emoji_result">

        <TextView
            android:id="@+id/tv_required_answers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/required_answers" />

        <TextView
            android:id="@+id/tv_score_answers"
            style="@style/BaseTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/score_answers"
            android:textColor="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/base_background"
        android:backgroundTint="@color/gray"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_retry"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_1">

        <TextView
            android:id="@+id/tv_required_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/required_percentage" />

        <TextView
            android:id="@+id/tv_score_percentage"
            style="@style/BaseTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_percentage"
            android:textColor="@color/blue" />
    </LinearLayout>

    <Button
        android:id="@+id/button_retry"
        style="@style/BaseButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>