<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".presentation.GameFragment">

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:background="@drawable/base_background"
        android:backgroundTint="@color/green"
        android:gravity="center"
        android:text="@string/clear_timer"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sum"
        style="@style/QuestionTextStyle"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:background="@drawable/circle_background"
        app:layout_constraintBottom_toTopOf="@+id/tv_left_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_timer"
        tools:text="4" />

    <TextView
        android:id="@+id/tv_left_number"
        style="@style/QuestionTextStyle"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toTopOf="@+id/tv_answers_progress"
        app:layout_constraintEnd_toStartOf="@+id/tv_question"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sum"
        tools:text="2" />

    <TextView
        android:id="@+id/tv_question"
        style="@style/QuestionTextStyle"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/tv_left_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_left_number"
        app:layout_constraintTop_toTopOf="@+id/tv_left_number"
        android:text="@string/question_mark" />

    <TextView
        style="@style/BaseTextStyle"
        android:id="@+id/tv_answers_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progress_answers"
        android:layout_margin="16dp"
        tools:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_left_number" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/CustomProgressBar"
        android:layout_margin="5dp"
        android:theme="@style/CustomProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_answers_progress"
        tools:progress="30"
        tools:secondaryProgress="70"
        tools:progressTint="@color/pink" />

    <TextView
        android:id="@+id/tv_option_1"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_4"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="1" />

    <TextView
        android:id="@+id/tv_option_2"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_5"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_option_1"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="2" />

    <TextView
        android:id="@+id/tv_option_3"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_option_2"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="3" />

    <TextView
        android:id="@+id/tv_option_4"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="4" />

    <TextView
        android:id="@+id/tv_option_5"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_option_4"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="5" />

    <TextView
        android:id="@+id/tv_option_6"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_option_5"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="6" />

</androidx.constraintlayout.widget.ConstraintLayout>